; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_ipfw2.c_pack_table.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_ipfw2.c_pack_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tidx = type { i32 }

@IPFW_TLV_TBL_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tidx*, i8*)* @pack_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pack_table(%struct.tidx* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tidx*, align 8
  %5 = alloca i8*, align 8
  store %struct.tidx* %0, %struct.tidx** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = call i64 @table_check_name(i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

10:                                               ; preds = %2
  %11 = load %struct.tidx*, %struct.tidx** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* @IPFW_TLV_TBL_NAME, align 4
  %14 = call i32 @pack_object(%struct.tidx* %11, i8* %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i64 @table_check_name(i8*) #1

declare dso_local i32 @pack_object(%struct.tidx*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
